--- a/src/About.css
+++ b/src/About.css
@@ -13,7 +13,7 @@ body {
   justify-content: center;
   min-height: 100vh; /* Full viewport height */
   text-align: center;
-
+  max-width: 100vw;
 
 }
 
@@ -48,9 +48,10 @@ body {
   }
   .landingPage{
     margin-top: 70px;
+    
   }
   .discription {
     padding: 10px;
-    max-width: 100%;
+    
   }
 }
