--- a/src/Home.css
+++ b/src/Home.css
@@ -1,60 +1,64 @@
-body {
-   /* Alice blue for a softer background */
-  color: #006400; /* Dark text for contrast */
-  font-family: 'Arial', sans-serif; /* Default font family */
-  margin: 0;
-  padding: 0;
-}
+  body {
+    /* Alice blue for a softer background */
+    color: #006400; /* Dark text for contrast */
+    font-family: 'Arial', sans-serif; /* Default font family */
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    padding-top: 2px;
+  }
 
-.landingPage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh; /* Full viewport height */
-  text-align: center;
+  .landingPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh; /* Full viewport height */
+    text-align: center;
 
-}
+  }
 
-#h1Home {
-  color: #006400; /* Sea green for heading */
-  font-weight: bold;
-  margin-bottom: 1px;
-  font-size: 4.5rem;
-  max-width: 100%;
-  padding-bottom: 2px;
-
-}
-
-
-.discription {
-  max-width: 80%; /* Limit width for better readability */
-  text-align: left;
-  padding: 15px;
-  line-height: 1.6;
-  font-weight: 400;
-  display: flex;
-  margin-bottom: 0px;
-  flex-direction: column;
-  text-align: center;
-  font-size: xx-large;
-  color: #068c06c0;
-}
-
-
-@media (max-width: 768px) {
   #h1Home {
-    font-size: 4rem; 
-    
-  }
-  .landingPage{
-    margin-top: 50px;
-    margin:10px;
-  }
-  .discription {
-    padding: 10px;
-    max-width: 100vh;
-    
+    color: #006400; /* Sea green for heading */
+    font-weight: bold;
+    margin-bottom: 1px;
+    font-size: 4.5rem;
+    max-width: 100%;
+    padding-bottom: 2px;
+
   }
 
-}
+
+  .discription {
+    max-width: 80%; /* Limit width for better readability */
+    text-align: left;
+    padding: 15px;
+    line-height: 1.6;
+    font-weight: 400;
+    display: flex;
+    margin-bottom: 0px;
+    flex-direction: column;
+    text-align: center;
+    font-size: xx-large;
+    color: #068c06c0;
+  }
+
+
+  @media (max-width: 768px) {
+    #h1Home {
+      font-size: 4rem; 
+      
+    }
+    .landingPage{
+      margin-top: 50px;
+      margin:10px;
+      max-width: 100;
+    }
+    .discription {
+      padding: 2px;
+      
+      
+    }
+
+  }
