--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@ body {
   padding: 0;  
   overflow: hidden;  
   scroll-behavior: smooth;           /* Remove default body padding */
+  display: flex; 
+  justify-content: center; /* Center content horizontally */
+  align-items: center;     /* Center content vertically */
 }
 @media (max-width: 768px) {
   h1 {
