--- a/src/elements/Home.css
+++ b/src/elements/Home.css
@@ -6,6 +6,7 @@
     padding: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding-top: 2px;
   }
 
@@ -16,6 +17,9 @@
     justify-content: center;
     min-height: 100vh; /* Full viewport height */
     text-align: center;
+    max-width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
 
   }
 
@@ -24,7 +28,7 @@
     font-weight: bold;
     margin-bottom: 1px;
     font-size: 4.5rem;
-    max-width: 100%;
+    max-width: 100vw;
     padding-bottom: 2px;
 
   }
@@ -32,7 +36,7 @@
 
   .discription {
     max-width: 80%; /* Limit width for better readability */
-    text-align: left;
+    text-align: center;
     padding: 15px;
     line-height: 1.6;
     font-weight: 400;
@@ -47,17 +51,19 @@
 
   @media (max-width: 768px) {
     #h1Home {
-      font-size: 4rem; 
+      font-size: 2.5rem; 
       
     }
     .landingPage{
       margin-top: 50px;
-      margin:10px;
-      max-width: 100;
+      max-width: 100vw;
+      min-height: 100vh
+      
+
     }
     .discription {
       padding: 2px;
-      
+      font-size: 1.5em ;
       
     }
 
