--- a/src/EventsPage.css
+++ b/src/EventsPage.css
@@ -3,6 +3,7 @@
   max-width: 100vw;
   margin: 0 auto;
   min-height: 100vh;
+
 }
 
 .events-page h1 {
@@ -10,7 +11,8 @@
   color: #006400;
   margin-bottom: 30px;
   font-size: 2.5em;
-  margin-top: 10%;
+  margin-top: 7%;
+  
 }
 
 .events-container {
@@ -267,20 +269,27 @@
     flex-direction: column;
     align-items: center;
   }
-  
+  .events-page h1 {
+    font-size: 2em;
+    margin-top: 30%;
+  }
   .calendar-section {
     width: 100%;
     min-width: 320px;
     max-width: 100%;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    padding-bottom: 0px;
+    min-height: 0vh ;
   }
+
 
   .custom-calendar {
     width: 100% !important;
     min-width: 320px !important;
     max-width: 100% !important;
     padding: 10px !important;
+  
   }
 
   .events-section {
