--- a/src/elements/ActiveBody.css
+++ b/src/elements/ActiveBody.css
@@ -1,11 +1,10 @@
 .active-body {
-  padding: 20px 20px;
   background-color: #e1f1e0;
   min-height: 50vh;
   overflow-x: scroll;
-  max-width: 800px;
-  margin-left: 10px;
-  margin-right:  10px;
+  max-width: 810px;
+  margin-left: 1%;
+  margin-right:  1%;
   scrollbar-width: none;
 }
 
@@ -84,13 +83,6 @@
   color: #FF69B4;
 }
 
-.team-slider2 .member-card2:last-child {
-  margin-right: 2px;
-}
-
-.team-slider2 .member-card2:first-child {
-  margin-left: 2px;
-}
 
 .controls2 {
   margin-bottom: 1px;
@@ -102,7 +94,7 @@
 }
 
 .controls2 button {
-  background-color: #007bff;
+  background-color: green; /* Bootstrap primary blue */
   border: none;
   color: white;
   margin: 0 5px;
@@ -121,6 +113,8 @@
     padding-top: 20px;
     overflow-x: scroll;
     max-width: 100vw;
+    margin-left: 6%;
+    margin-right: 5%;
     display: flex ;
     flex-direction: column;
     
@@ -129,11 +123,11 @@
 
   .team-slider2 {
     gap: 10px;
-        padding: 10px;
+
   }
 
   .member-card2 {
-    padding: 20px;
+    padding: 105px;
     
   }
 
