--- a/src/elements/GoverningBody.css
+++ b/src/elements/GoverningBody.css
@@ -1,11 +1,11 @@
 .governing-body {
-  padding: 20px 20px;
+
   background-color: #e1f1e0;
   min-height: 50vh;
   overflow-x: scroll;
-  max-width: 800px;
-  margin-left: 10px;
-  margin-right: 10px;
+  max-width: 810px;
+  margin-left: 1%;
+  margin-right: 1%;
   scrollbar-width: none;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .member-card:hover {
-  transform: scale(1);
+  transform: scale(1.00);
   box-shadow: 0 10px 20px rgba(0, 100, 0, 0.15);
 
 }
@@ -79,14 +79,6 @@
   margin-bottom: 4px;
 }
 
-.team-slider .member-card:last-child {
-  margin-right: 2px;
-}
-
-.team-slider .member-card:first-child {
-  margin-left: 2px;
-}
-
 .member-card .name {
   font-size: 0.85rem;
   color: #FF69B4;
@@ -100,7 +92,7 @@
   position: relative;
 }
 .controls button {
-  background-color: #007bff; /* Bootstrap primary blue */
+  background-color: green; /* Bootstrap primary blue */
   border: none;
   color: white;
   margin: 0 5px;
@@ -117,31 +109,33 @@
 /* Mobile-specific styles */
 @media (max-width: 600px) {
   .governing-body {
-    padding: 20px 0px;
+    padding: 20px;
     overflow-x: scroll; /* Allow horizontal scrolling */
     max-width: 100vw;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 3%;
+    margin-right: 5%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    
   }
   .governing-body h2{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
   .team-slider {
     gap: 10px;
     
   }
-
+  
 
   .member-card {
-    padding: 20px; /* Ensure text and images fit well within smaller card sizes */
+    padding: 105px; /* Ensure text and images fit well within smaller card sizes */
   }
   .member-card:hover{
-    transform: scale(0);
+    transform: none;
+
   }
 
   .member-card img {
