--- a/src/elements/Home.css
+++ b/src/elements/Home.css
@@ -20,7 +20,8 @@
     max-width: 100vw;
     margin-left: auto;
     margin-right: auto;
-
+    font-weight: 200;
+    font-size: larger;
   }
 
   #h1Home {
@@ -39,13 +40,13 @@
     text-align: center;
     padding: 15px;
     line-height: 1.6;
-    font-weight: 400;
+    
     display: flex;
     margin-bottom: 0px;
     flex-direction: column;
     text-align: center;
-    font-size: xx-large;
     color: #068c06c0;
+
   }
 
 
@@ -57,7 +58,8 @@
     .landingPage{
       margin-top: 50px;
       max-width: 100vw;
-      min-height: 100vh
+      min-height: 100vh;
+      font-size: large;
       
 
     }
